add images to the markdown file

--- a/src/pages/blogs/jan23-2020.md
+++ b/src/pages/blogs/jan23-2020.md
@@ -2,15 +2,74 @@
 title: Learn About Markdown  
 date : "2020-01-23"
 description: "Markdown Cheatsheet"
+featuredImage: ../../images/gatsby-icon.png
+sectionImage: ../../images/gatsby-astronaut.png
 ---
-# This is a H1
-## This is a H2
-### This is a H3
+## Learn Goal:
+Add Images to the markdown post 
 
-[I'm an inline-style link](https://www.google.com)
+## Solutions
+### 1. Query images from frontmatter 
+Add new key value pairs that could provide specfic data value and be queried in the GraphQL data layer. This data is called frontmatter and is denoted by the triple dashes at the start and end of the block. 
+In this case, I add two new data values to this post, one is called featuredImage(Fixed), the other is called sectionImage(Fluid). As not all the blog posts has these two value pairs, I used conditional rendering to check if the data is existed.
 
-- make
-- a
-- list 
+```javascript
+// Set up key value pair in your markdown file 
+featuredImage: ../../images/gatsby-icon.png
 
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
+// Your blog post component
+export default ((data) => {
+  const featuredImage = data.markdownRemark.frontmatter.featuredImage
+
+  return (
+    {
+      featuredImage ? <Img fixed={featuredImage.childImageSharp.fixed} /> : ''
+    }
+  )
+})
+
+// Query in your blog template file 
+query($slug: String!) {
+  markdownRemark(fields: { slug: { eq: $slug } }) {
+    frontmatter {
+      featuredImage {
+        childImageSharp {
+          fixed(width: 50) {
+            ...GatsbyImageSharpFixed
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+### 2. Using the Transformer Remark Plugin for Inline images
+![The Astronaut](../../images/gatsby-astronaut.png)
+You can display your images in the Markdown body itself by add the plugin `gatsby-remark-images`. Make sure to configure your newly installed plugins in the `gatsby-config` file.
+```javascript
+plugins: [
+    `gatsby-plugin-sharp`,
+    {
+      resolve: `gatsby-transformer-remark`,
+      options: {
+        plugins: [
+          {
+            resolve: `gatsby-remark-images`,
+            options: {
+              maxWidth: 800,
+            },
+          },
+        ],
+      },
+    },
+    {
+      resolve: `gatsby-source-filesystem`,
+      options: {
+        path: `${__dirname}/src/pages/blogs`,
+      },
+    },
+  ],
+```
+
+Learn more: [gatsby-remark-images](https://www.gatsbyjs.org/packages/gatsby-remark-images)
