update post title

--- a/src/pages/blogs/jan23-2020.md
+++ b/src/pages/blogs/jan23-2020.md
@@ -1,5 +1,5 @@
 --- 
-title: Learn About Markdown  
+title: Add Images to markdown file
 date : "2020-01-23"
 description: "Markdown Cheatsheet"
 featuredImage: ../../images/gatsby-icon.png
