Add new posts to the site

--- a/src/pages/blogs/jan23-2020.md
+++ b/src/pages/blogs/jan23-2020.md
@@ -5,7 +5,7 @@ description: "Markdown Cheatsheet"
 featuredImage: ../../images/gatsby-icon.png
 sectionImage: ../../images/gatsby-astronaut.png
 ---
-## Learn Goal:
+## Learning Goal:
 Add Images to the markdown post 
 
 ## Solutions
