--- a/src/content/blogs/jan23-2020.md
+++ b/src/content/blogs/jan23-2020.md
@@ -66,7 +66,7 @@ plugins: [
     {
       resolve: `gatsby-source-filesystem`,
       options: {
-        path: `${__dirname}/src/pages/blogs`,
+        path: `${__dirname}/src/content/blogs`,
       },
     },
   ],
