--- a/src/pages/mdxpage.mdx
+++ b/src/pages/mdxpage.mdx
@@ -8,7 +8,7 @@ import SEO from "../components/seo"
 
 <SEO title="MDX Pages" description="Build your pages with MDX in Gatsby" />
 
-# Writing page in MDX
+# Writing pages in MDX
 When handling long-form content for your pages, JSX is the ideal format. MDX could transform the heavily syntax based file to be fairly straight-forward. Let's dive in to how to work with MDX in Gatsby.
 ### What is MDX
 MDX is Markdown for the component era. It lets you write JSX embedded inside Markdown. Importing and JSX syntax works just like it does in your components. This results in a seamless experience for developers and content authors alike. 
